src/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BIT
    DATE
    DATETIME
    DECIMAL1
    EXEC
    FIREIGN
    NCHAR
    NOT1
    OR
    PROCEDURE
    PUNTO
    RETURNS
    VALUES

Grammar

Rule 0     S' -> initial
Rule 1     initial -> produccion initial
Rule 2     initial -> produccion
Rule 3     produccion -> create PCOMA
Rule 4     produccion -> createdb PCOMA
Rule 5     produccion -> insert PCOMA
Rule 6     produccion -> update PCOMA
Rule 7     produccion -> select PCOMA
Rule 8     produccion -> alter PCOMA
Rule 9     createdb -> CREATE DATA BASE ID
Rule 10    create -> CREATE TABLE ID LPAREN defcreate RPAREN
Rule 11    defcreate -> ID tipodato campo COMA defcreate
Rule 12    defcreate -> ID tipodato
Rule 13    defcreate -> ID tipodato campo
Rule 14    campo -> NOT NULL
Rule 15    campo -> PRIMARY KEY
Rule 16    campo -> foranea
Rule 17    foranea -> REFERENCES ID LPAREN ID RPAREN
Rule 18    tipodato -> INT
Rule 19    tipodato -> DECIMAL
Rule 20    tipodato -> BOOL
Rule 21    tipodato -> NVARCHAR LPAREN NUMBER RPAREN
Rule 22    select -> selectbasico
Rule 23    select -> selectdefinidos
Rule 24    select -> selectasignacion
Rule 25    selectdefinidos -> SELECT CONCATENAR LPAREN CADENA COMA CADENA RPAREN
Rule 26    selectdefinidos -> SELECT SUBSTRAER LPAREN CADENA COMA NUMBER COMA NUMBER
Rule 27    selectdefinidos -> SELECT HOY LPAREN RPAREN
Rule 28    selectdefinidos -> SELECT CONTAR LPAREN TIMES RPAREN FROM ID WHERE campocambios
Rule 29    selectdefinidos -> SELECT SUMA LPAREN ID RPAREN FROM ID WHERE campocambios
Rule 30    selectdefinidos -> SELECT CAST
Rule 31    selectbasico -> SELECT TIMES FROM ID
Rule 32    selectasignacion -> SELECT
Rule 33    alter -> ALTER TABLE ID ADD ID tipodato
Rule 34    alter -> ALTER TABLE ID drop
Rule 35    truncate -> TRUNCATE TABLE ID
Rule 36    drop -> DROP TABLE ID
Rule 37    drop -> DROP COLUMN ID
Rule 38    insert -> INSERT INTO ID parametros
Rule 39    valores -> ID COMA valores
Rule 40    valores -> ID
Rule 41    update -> UPDATE ID SET cambios WHERE ID EQUALS expression
Rule 42    cambios -> campocambios COMA cambios
Rule 43    cambios -> campocambios
Rule 44    campocambios -> ID EQUALS expression
Rule 45    delete -> DELETE FROM ID WHERE ID EQUALS expression
Rule 46    acciones -> variable PCOMA
Rule 47    acciones -> select PCOMA
Rule 48    acciones -> if
Rule 49    variable -> DECLARE ARROBA ID tipodato
Rule 50    funcion -> CREATE FUNCTION ID LPAREN parametros RPAREN RETURN tipodato AS BEGIN END
Rule 51    parametros -> ARROBA ID tipodato COMA parametros
Rule 52    parametros -> ARROBA ID tipodato
Rule 53    accionesfuncion -> <empty>
Rule 54    if -> IF LPAREN condicion RPAREN
Rule 55    condicion -> expression toperador expression
Rule 56    toperador -> IGUAL
Rule 57    toperador -> DIFERENTE
Rule 58    toperador -> MAYORQ
Rule 59    toperador -> MENORQ
Rule 60    toperador -> MAYORIQ
Rule 61    toperador -> MENORIQ
Rule 62    while -> <empty>
Rule 63    expression -> expression PLUS term
Rule 64    expression -> expression MINUS term
Rule 65    expression -> term
Rule 66    term -> term TIMES factor
Rule 67    term -> term DIVIDE factor
Rule 68    term -> factor
Rule 69    factor -> NUMBER
Rule 70    factor -> DECIMAL
Rule 71    start -> initial

Terminals, with rules where they appear

ADD                  : 33
ALTER                : 33 34
AND                  : 
ARROBA               : 49 51 52
AS                   : 50
BASE                 : 9
BEGIN                : 50
BIT                  : 
BOOL                 : 20
CADENA               : 25 25 26
CAST                 : 30
COLUMN               : 37
COMA                 : 11 25 26 26 39 42 51
CONCATENAR           : 25
CONTAR               : 28
CREATE               : 9 10 50
DATA                 : 9
DATE                 : 
DATETIME             : 
DECIMAL              : 19 70
DECIMAL1             : 
DECLARE              : 49
DELETE               : 45
DIFERENTE            : 57
DIVIDE               : 67
DROP                 : 36 37
END                  : 50
EQUALS               : 41 44 45
EXEC                 : 
FIREIGN              : 
FROM                 : 28 29 31 45
FUNCTION             : 50
HOY                  : 27
ID                   : 9 10 11 12 13 17 17 28 29 29 31 33 33 34 35 36 37 38 39 40 41 41 44 45 45 49 50 51 52
IF                   : 54
IGUAL                : 56
INSERT               : 38
INT                  : 18
INTO                 : 38
KEY                  : 15
LPAREN               : 10 17 21 25 26 27 28 29 50 54
MAYORIQ              : 60
MAYORQ               : 58
MENORIQ              : 61
MENORQ               : 59
MINUS                : 64
NCHAR                : 
NOT                  : 14
NOT1                 : 
NULL                 : 14
NUMBER               : 21 26 26 69
NVARCHAR             : 21
OR                   : 
PCOMA                : 3 4 5 6 7 8 46 47
PLUS                 : 63
PRIMARY              : 15
PROCEDURE            : 
PUNTO                : 
REFERENCES           : 17
RETURN               : 50
RETURNS              : 
RPAREN               : 10 17 21 25 27 28 29 50 54
SELECT               : 25 26 27 28 29 30 31 32
SET                  : 41
SUBSTRAER            : 26
SUMA                 : 29
TABLE                : 10 33 34 35 36
TIMES                : 28 31 66
TRUNCATE             : 35
UPDATE               : 41
VALUES               : 
WHERE                : 28 29 41 45
error                : 

Nonterminals, with rules where they appear

acciones             : 
accionesfuncion      : 
alter                : 8
cambios              : 41 42
campo                : 11 13
campocambios         : 28 29 42 43
condicion            : 54
create               : 3
createdb             : 4
defcreate            : 10 11
delete               : 
drop                 : 34
expression           : 41 44 45 55 55 63 64
factor               : 66 67 68
foranea              : 16
funcion              : 
if                   : 48
initial              : 1 71 0
insert               : 5
parametros           : 38 50 51
produccion           : 1 2
select               : 7 47
selectasignacion     : 24
selectbasico         : 22
selectdefinidos      : 23
start                : 
term                 : 63 64 65 66 67
tipodato             : 11 12 13 33 49 50 51 52
toperador            : 55
truncate             : 
update               : 6
valores              : 39
variable             : 46
while                : 

Parsing method: LALR

state 0

    (0) S' -> . initial
    (1) initial -> . produccion initial
    (2) initial -> . produccion
    (3) produccion -> . create PCOMA
    (4) produccion -> . createdb PCOMA
    (5) produccion -> . insert PCOMA
    (6) produccion -> . update PCOMA
    (7) produccion -> . select PCOMA
    (8) produccion -> . alter PCOMA
    (10) create -> . CREATE TABLE ID LPAREN defcreate RPAREN
    (9) createdb -> . CREATE DATA BASE ID
    (38) insert -> . INSERT INTO ID parametros
    (41) update -> . UPDATE ID SET cambios WHERE ID EQUALS expression
    (22) select -> . selectbasico
    (23) select -> . selectdefinidos
    (24) select -> . selectasignacion
    (33) alter -> . ALTER TABLE ID ADD ID tipodato
    (34) alter -> . ALTER TABLE ID drop
    (31) selectbasico -> . SELECT TIMES FROM ID
    (25) selectdefinidos -> . SELECT CONCATENAR LPAREN CADENA COMA CADENA RPAREN
    (26) selectdefinidos -> . SELECT SUBSTRAER LPAREN CADENA COMA NUMBER COMA NUMBER
    (27) selectdefinidos -> . SELECT HOY LPAREN RPAREN
    (28) selectdefinidos -> . SELECT CONTAR LPAREN TIMES RPAREN FROM ID WHERE campocambios
    (29) selectdefinidos -> . SELECT SUMA LPAREN ID RPAREN FROM ID WHERE campocambios
    (30) selectdefinidos -> . SELECT CAST
    (32) selectasignacion -> . SELECT

    CREATE          shift and go to state 9
    INSERT          shift and go to state 10
    UPDATE          shift and go to state 11
    ALTER           shift and go to state 15
    SELECT          shift and go to state 16

    initial                        shift and go to state 1
    produccion                     shift and go to state 2
    create                         shift and go to state 3
    createdb                       shift and go to state 4
    insert                         shift and go to state 5
    update                         shift and go to state 6
    select                         shift and go to state 7
    alter                          shift and go to state 8
    selectbasico                   shift and go to state 12
    selectdefinidos                shift and go to state 13
    selectasignacion               shift and go to state 14

state 1

    (0) S' -> initial .



state 2

    (1) initial -> produccion . initial
    (2) initial -> produccion .
    (1) initial -> . produccion initial
    (2) initial -> . produccion
    (3) produccion -> . create PCOMA
    (4) produccion -> . createdb PCOMA
    (5) produccion -> . insert PCOMA
    (6) produccion -> . update PCOMA
    (7) produccion -> . select PCOMA
    (8) produccion -> . alter PCOMA
    (10) create -> . CREATE TABLE ID LPAREN defcreate RPAREN
    (9) createdb -> . CREATE DATA BASE ID
    (38) insert -> . INSERT INTO ID parametros
    (41) update -> . UPDATE ID SET cambios WHERE ID EQUALS expression
    (22) select -> . selectbasico
    (23) select -> . selectdefinidos
    (24) select -> . selectasignacion
    (33) alter -> . ALTER TABLE ID ADD ID tipodato
    (34) alter -> . ALTER TABLE ID drop
    (31) selectbasico -> . SELECT TIMES FROM ID
    (25) selectdefinidos -> . SELECT CONCATENAR LPAREN CADENA COMA CADENA RPAREN
    (26) selectdefinidos -> . SELECT SUBSTRAER LPAREN CADENA COMA NUMBER COMA NUMBER
    (27) selectdefinidos -> . SELECT HOY LPAREN RPAREN
    (28) selectdefinidos -> . SELECT CONTAR LPAREN TIMES RPAREN FROM ID WHERE campocambios
    (29) selectdefinidos -> . SELECT SUMA LPAREN ID RPAREN FROM ID WHERE campocambios
    (30) selectdefinidos -> . SELECT CAST
    (32) selectasignacion -> . SELECT

    $end            reduce using rule 2 (initial -> produccion .)
    CREATE          shift and go to state 9
    INSERT          shift and go to state 10
    UPDATE          shift and go to state 11
    ALTER           shift and go to state 15
    SELECT          shift and go to state 16

    produccion                     shift and go to state 2
    initial                        shift and go to state 17
    create                         shift and go to state 3
    createdb                       shift and go to state 4
    insert                         shift and go to state 5
    update                         shift and go to state 6
    select                         shift and go to state 7
    alter                          shift and go to state 8
    selectbasico                   shift and go to state 12
    selectdefinidos                shift and go to state 13
    selectasignacion               shift and go to state 14

state 3

    (3) produccion -> create . PCOMA

    PCOMA           shift and go to state 18


state 4

    (4) produccion -> createdb . PCOMA

    PCOMA           shift and go to state 19


state 5

    (5) produccion -> insert . PCOMA

    PCOMA           shift and go to state 20


state 6

    (6) produccion -> update . PCOMA

    PCOMA           shift and go to state 21


state 7

    (7) produccion -> select . PCOMA

    PCOMA           shift and go to state 22


state 8

    (8) produccion -> alter . PCOMA

    PCOMA           shift and go to state 23


state 9

    (10) create -> CREATE . TABLE ID LPAREN defcreate RPAREN
    (9) createdb -> CREATE . DATA BASE ID

    TABLE           shift and go to state 24
    DATA            shift and go to state 25


state 10

    (38) insert -> INSERT . INTO ID parametros

    INTO            shift and go to state 26


state 11

    (41) update -> UPDATE . ID SET cambios WHERE ID EQUALS expression

    ID              shift and go to state 27


state 12

    (22) select -> selectbasico .

    PCOMA           reduce using rule 22 (select -> selectbasico .)


state 13

    (23) select -> selectdefinidos .

    PCOMA           reduce using rule 23 (select -> selectdefinidos .)


state 14

    (24) select -> selectasignacion .

    PCOMA           reduce using rule 24 (select -> selectasignacion .)


state 15

    (33) alter -> ALTER . TABLE ID ADD ID tipodato
    (34) alter -> ALTER . TABLE ID drop

    TABLE           shift and go to state 28


state 16

    (31) selectbasico -> SELECT . TIMES FROM ID
    (25) selectdefinidos -> SELECT . CONCATENAR LPAREN CADENA COMA CADENA RPAREN
    (26) selectdefinidos -> SELECT . SUBSTRAER LPAREN CADENA COMA NUMBER COMA NUMBER
    (27) selectdefinidos -> SELECT . HOY LPAREN RPAREN
    (28) selectdefinidos -> SELECT . CONTAR LPAREN TIMES RPAREN FROM ID WHERE campocambios
    (29) selectdefinidos -> SELECT . SUMA LPAREN ID RPAREN FROM ID WHERE campocambios
    (30) selectdefinidos -> SELECT . CAST
    (32) selectasignacion -> SELECT .

    TIMES           shift and go to state 29
    CONCATENAR      shift and go to state 30
    SUBSTRAER       shift and go to state 31
    HOY             shift and go to state 32
    CONTAR          shift and go to state 33
    SUMA            shift and go to state 34
    CAST            shift and go to state 35
    PCOMA           reduce using rule 32 (selectasignacion -> SELECT .)


state 17

    (1) initial -> produccion initial .

    $end            reduce using rule 1 (initial -> produccion initial .)


state 18

    (3) produccion -> create PCOMA .

    CREATE          reduce using rule 3 (produccion -> create PCOMA .)
    INSERT          reduce using rule 3 (produccion -> create PCOMA .)
    UPDATE          reduce using rule 3 (produccion -> create PCOMA .)
    ALTER           reduce using rule 3 (produccion -> create PCOMA .)
    SELECT          reduce using rule 3 (produccion -> create PCOMA .)
    $end            reduce using rule 3 (produccion -> create PCOMA .)


state 19

    (4) produccion -> createdb PCOMA .

    CREATE          reduce using rule 4 (produccion -> createdb PCOMA .)
    INSERT          reduce using rule 4 (produccion -> createdb PCOMA .)
    UPDATE          reduce using rule 4 (produccion -> createdb PCOMA .)
    ALTER           reduce using rule 4 (produccion -> createdb PCOMA .)
    SELECT          reduce using rule 4 (produccion -> createdb PCOMA .)
    $end            reduce using rule 4 (produccion -> createdb PCOMA .)


state 20

    (5) produccion -> insert PCOMA .

    CREATE          reduce using rule 5 (produccion -> insert PCOMA .)
    INSERT          reduce using rule 5 (produccion -> insert PCOMA .)
    UPDATE          reduce using rule 5 (produccion -> insert PCOMA .)
    ALTER           reduce using rule 5 (produccion -> insert PCOMA .)
    SELECT          reduce using rule 5 (produccion -> insert PCOMA .)
    $end            reduce using rule 5 (produccion -> insert PCOMA .)


state 21

    (6) produccion -> update PCOMA .

    CREATE          reduce using rule 6 (produccion -> update PCOMA .)
    INSERT          reduce using rule 6 (produccion -> update PCOMA .)
    UPDATE          reduce using rule 6 (produccion -> update PCOMA .)
    ALTER           reduce using rule 6 (produccion -> update PCOMA .)
    SELECT          reduce using rule 6 (produccion -> update PCOMA .)
    $end            reduce using rule 6 (produccion -> update PCOMA .)


state 22

    (7) produccion -> select PCOMA .

    CREATE          reduce using rule 7 (produccion -> select PCOMA .)
    INSERT          reduce using rule 7 (produccion -> select PCOMA .)
    UPDATE          reduce using rule 7 (produccion -> select PCOMA .)
    ALTER           reduce using rule 7 (produccion -> select PCOMA .)
    SELECT          reduce using rule 7 (produccion -> select PCOMA .)
    $end            reduce using rule 7 (produccion -> select PCOMA .)


state 23

    (8) produccion -> alter PCOMA .

    CREATE          reduce using rule 8 (produccion -> alter PCOMA .)
    INSERT          reduce using rule 8 (produccion -> alter PCOMA .)
    UPDATE          reduce using rule 8 (produccion -> alter PCOMA .)
    ALTER           reduce using rule 8 (produccion -> alter PCOMA .)
    SELECT          reduce using rule 8 (produccion -> alter PCOMA .)
    $end            reduce using rule 8 (produccion -> alter PCOMA .)


state 24

    (10) create -> CREATE TABLE . ID LPAREN defcreate RPAREN

    ID              shift and go to state 36


state 25

    (9) createdb -> CREATE DATA . BASE ID

    BASE            shift and go to state 37


state 26

    (38) insert -> INSERT INTO . ID parametros

    ID              shift and go to state 38


state 27

    (41) update -> UPDATE ID . SET cambios WHERE ID EQUALS expression

    SET             shift and go to state 39


state 28

    (33) alter -> ALTER TABLE . ID ADD ID tipodato
    (34) alter -> ALTER TABLE . ID drop

    ID              shift and go to state 40


state 29

    (31) selectbasico -> SELECT TIMES . FROM ID

    FROM            shift and go to state 41


state 30

    (25) selectdefinidos -> SELECT CONCATENAR . LPAREN CADENA COMA CADENA RPAREN

    LPAREN          shift and go to state 42


state 31

    (26) selectdefinidos -> SELECT SUBSTRAER . LPAREN CADENA COMA NUMBER COMA NUMBER

    LPAREN          shift and go to state 43


state 32

    (27) selectdefinidos -> SELECT HOY . LPAREN RPAREN

    LPAREN          shift and go to state 44


state 33

    (28) selectdefinidos -> SELECT CONTAR . LPAREN TIMES RPAREN FROM ID WHERE campocambios

    LPAREN          shift and go to state 45


state 34

    (29) selectdefinidos -> SELECT SUMA . LPAREN ID RPAREN FROM ID WHERE campocambios

    LPAREN          shift and go to state 46


state 35

    (30) selectdefinidos -> SELECT CAST .

    PCOMA           reduce using rule 30 (selectdefinidos -> SELECT CAST .)


state 36

    (10) create -> CREATE TABLE ID . LPAREN defcreate RPAREN

    LPAREN          shift and go to state 47


state 37

    (9) createdb -> CREATE DATA BASE . ID

    ID              shift and go to state 48


state 38

    (38) insert -> INSERT INTO ID . parametros
    (51) parametros -> . ARROBA ID tipodato COMA parametros
    (52) parametros -> . ARROBA ID tipodato

    ARROBA          shift and go to state 50

    parametros                     shift and go to state 49

state 39

    (41) update -> UPDATE ID SET . cambios WHERE ID EQUALS expression
    (42) cambios -> . campocambios COMA cambios
    (43) cambios -> . campocambios
    (44) campocambios -> . ID EQUALS expression

    ID              shift and go to state 51

    cambios                        shift and go to state 52
    campocambios                   shift and go to state 53

state 40

    (33) alter -> ALTER TABLE ID . ADD ID tipodato
    (34) alter -> ALTER TABLE ID . drop
    (36) drop -> . DROP TABLE ID
    (37) drop -> . DROP COLUMN ID

    ADD             shift and go to state 54
    DROP            shift and go to state 56

    drop                           shift and go to state 55

state 41

    (31) selectbasico -> SELECT TIMES FROM . ID

    ID              shift and go to state 57


state 42

    (25) selectdefinidos -> SELECT CONCATENAR LPAREN . CADENA COMA CADENA RPAREN

    CADENA          shift and go to state 58


state 43

    (26) selectdefinidos -> SELECT SUBSTRAER LPAREN . CADENA COMA NUMBER COMA NUMBER

    CADENA          shift and go to state 59


state 44

    (27) selectdefinidos -> SELECT HOY LPAREN . RPAREN

    RPAREN          shift and go to state 60


state 45

    (28) selectdefinidos -> SELECT CONTAR LPAREN . TIMES RPAREN FROM ID WHERE campocambios

    TIMES           shift and go to state 61


state 46

    (29) selectdefinidos -> SELECT SUMA LPAREN . ID RPAREN FROM ID WHERE campocambios

    ID              shift and go to state 62


state 47

    (10) create -> CREATE TABLE ID LPAREN . defcreate RPAREN
    (11) defcreate -> . ID tipodato campo COMA defcreate
    (12) defcreate -> . ID tipodato
    (13) defcreate -> . ID tipodato campo

    ID              shift and go to state 63

    defcreate                      shift and go to state 64

state 48

    (9) createdb -> CREATE DATA BASE ID .

    PCOMA           reduce using rule 9 (createdb -> CREATE DATA BASE ID .)


state 49

    (38) insert -> INSERT INTO ID parametros .

    PCOMA           reduce using rule 38 (insert -> INSERT INTO ID parametros .)


state 50

    (51) parametros -> ARROBA . ID tipodato COMA parametros
    (52) parametros -> ARROBA . ID tipodato

    ID              shift and go to state 65


state 51

    (44) campocambios -> ID . EQUALS expression

    EQUALS          shift and go to state 66


state 52

    (41) update -> UPDATE ID SET cambios . WHERE ID EQUALS expression

    WHERE           shift and go to state 67


state 53

    (42) cambios -> campocambios . COMA cambios
    (43) cambios -> campocambios .

    COMA            shift and go to state 68
    WHERE           reduce using rule 43 (cambios -> campocambios .)


state 54

    (33) alter -> ALTER TABLE ID ADD . ID tipodato

    ID              shift and go to state 69


state 55

    (34) alter -> ALTER TABLE ID drop .

    PCOMA           reduce using rule 34 (alter -> ALTER TABLE ID drop .)


state 56

    (36) drop -> DROP . TABLE ID
    (37) drop -> DROP . COLUMN ID

    TABLE           shift and go to state 70
    COLUMN          shift and go to state 71


state 57

    (31) selectbasico -> SELECT TIMES FROM ID .

    PCOMA           reduce using rule 31 (selectbasico -> SELECT TIMES FROM ID .)


state 58

    (25) selectdefinidos -> SELECT CONCATENAR LPAREN CADENA . COMA CADENA RPAREN

    COMA            shift and go to state 72


state 59

    (26) selectdefinidos -> SELECT SUBSTRAER LPAREN CADENA . COMA NUMBER COMA NUMBER

    COMA            shift and go to state 73


state 60

    (27) selectdefinidos -> SELECT HOY LPAREN RPAREN .

    PCOMA           reduce using rule 27 (selectdefinidos -> SELECT HOY LPAREN RPAREN .)


state 61

    (28) selectdefinidos -> SELECT CONTAR LPAREN TIMES . RPAREN FROM ID WHERE campocambios

    RPAREN          shift and go to state 74


state 62

    (29) selectdefinidos -> SELECT SUMA LPAREN ID . RPAREN FROM ID WHERE campocambios

    RPAREN          shift and go to state 75


state 63

    (11) defcreate -> ID . tipodato campo COMA defcreate
    (12) defcreate -> ID . tipodato
    (13) defcreate -> ID . tipodato campo
    (18) tipodato -> . INT
    (19) tipodato -> . DECIMAL
    (20) tipodato -> . BOOL
    (21) tipodato -> . NVARCHAR LPAREN NUMBER RPAREN

    INT             shift and go to state 77
    DECIMAL         shift and go to state 78
    BOOL            shift and go to state 79
    NVARCHAR        shift and go to state 80

    tipodato                       shift and go to state 76

state 64

    (10) create -> CREATE TABLE ID LPAREN defcreate . RPAREN

    RPAREN          shift and go to state 81


state 65

    (51) parametros -> ARROBA ID . tipodato COMA parametros
    (52) parametros -> ARROBA ID . tipodato
    (18) tipodato -> . INT
    (19) tipodato -> . DECIMAL
    (20) tipodato -> . BOOL
    (21) tipodato -> . NVARCHAR LPAREN NUMBER RPAREN

    INT             shift and go to state 77
    DECIMAL         shift and go to state 78
    BOOL            shift and go to state 79
    NVARCHAR        shift and go to state 80

    tipodato                       shift and go to state 82

state 66

    (44) campocambios -> ID EQUALS . expression
    (63) expression -> . expression PLUS term
    (64) expression -> . expression MINUS term
    (65) expression -> . term
    (66) term -> . term TIMES factor
    (67) term -> . term DIVIDE factor
    (68) term -> . factor
    (69) factor -> . NUMBER
    (70) factor -> . DECIMAL

    NUMBER          shift and go to state 86
    DECIMAL         shift and go to state 87

    expression                     shift and go to state 83
    term                           shift and go to state 84
    factor                         shift and go to state 85

state 67

    (41) update -> UPDATE ID SET cambios WHERE . ID EQUALS expression

    ID              shift and go to state 88


state 68

    (42) cambios -> campocambios COMA . cambios
    (42) cambios -> . campocambios COMA cambios
    (43) cambios -> . campocambios
    (44) campocambios -> . ID EQUALS expression

    ID              shift and go to state 51

    campocambios                   shift and go to state 53
    cambios                        shift and go to state 89

state 69

    (33) alter -> ALTER TABLE ID ADD ID . tipodato
    (18) tipodato -> . INT
    (19) tipodato -> . DECIMAL
    (20) tipodato -> . BOOL
    (21) tipodato -> . NVARCHAR LPAREN NUMBER RPAREN

    INT             shift and go to state 77
    DECIMAL         shift and go to state 78
    BOOL            shift and go to state 79
    NVARCHAR        shift and go to state 80

    tipodato                       shift and go to state 90

state 70

    (36) drop -> DROP TABLE . ID

    ID              shift and go to state 91


state 71

    (37) drop -> DROP COLUMN . ID

    ID              shift and go to state 92


state 72

    (25) selectdefinidos -> SELECT CONCATENAR LPAREN CADENA COMA . CADENA RPAREN

    CADENA          shift and go to state 93


state 73

    (26) selectdefinidos -> SELECT SUBSTRAER LPAREN CADENA COMA . NUMBER COMA NUMBER

    NUMBER          shift and go to state 94


state 74

    (28) selectdefinidos -> SELECT CONTAR LPAREN TIMES RPAREN . FROM ID WHERE campocambios

    FROM            shift and go to state 95


state 75

    (29) selectdefinidos -> SELECT SUMA LPAREN ID RPAREN . FROM ID WHERE campocambios

    FROM            shift and go to state 96


state 76

    (11) defcreate -> ID tipodato . campo COMA defcreate
    (12) defcreate -> ID tipodato .
    (13) defcreate -> ID tipodato . campo
    (14) campo -> . NOT NULL
    (15) campo -> . PRIMARY KEY
    (16) campo -> . foranea
    (17) foranea -> . REFERENCES ID LPAREN ID RPAREN

    RPAREN          reduce using rule 12 (defcreate -> ID tipodato .)
    NOT             shift and go to state 98
    PRIMARY         shift and go to state 99
    REFERENCES      shift and go to state 101

    campo                          shift and go to state 97
    foranea                        shift and go to state 100

state 77

    (18) tipodato -> INT .

    NOT             reduce using rule 18 (tipodato -> INT .)
    PRIMARY         reduce using rule 18 (tipodato -> INT .)
    REFERENCES      reduce using rule 18 (tipodato -> INT .)
    RPAREN          reduce using rule 18 (tipodato -> INT .)
    COMA            reduce using rule 18 (tipodato -> INT .)
    PCOMA           reduce using rule 18 (tipodato -> INT .)


state 78

    (19) tipodato -> DECIMAL .

    NOT             reduce using rule 19 (tipodato -> DECIMAL .)
    PRIMARY         reduce using rule 19 (tipodato -> DECIMAL .)
    REFERENCES      reduce using rule 19 (tipodato -> DECIMAL .)
    RPAREN          reduce using rule 19 (tipodato -> DECIMAL .)
    COMA            reduce using rule 19 (tipodato -> DECIMAL .)
    PCOMA           reduce using rule 19 (tipodato -> DECIMAL .)


state 79

    (20) tipodato -> BOOL .

    NOT             reduce using rule 20 (tipodato -> BOOL .)
    PRIMARY         reduce using rule 20 (tipodato -> BOOL .)
    REFERENCES      reduce using rule 20 (tipodato -> BOOL .)
    RPAREN          reduce using rule 20 (tipodato -> BOOL .)
    COMA            reduce using rule 20 (tipodato -> BOOL .)
    PCOMA           reduce using rule 20 (tipodato -> BOOL .)


state 80

    (21) tipodato -> NVARCHAR . LPAREN NUMBER RPAREN

    LPAREN          shift and go to state 102


state 81

    (10) create -> CREATE TABLE ID LPAREN defcreate RPAREN .

    PCOMA           reduce using rule 10 (create -> CREATE TABLE ID LPAREN defcreate RPAREN .)


state 82

    (51) parametros -> ARROBA ID tipodato . COMA parametros
    (52) parametros -> ARROBA ID tipodato .

    COMA            shift and go to state 103
    PCOMA           reduce using rule 52 (parametros -> ARROBA ID tipodato .)


state 83

    (44) campocambios -> ID EQUALS expression .
    (63) expression -> expression . PLUS term
    (64) expression -> expression . MINUS term

    COMA            reduce using rule 44 (campocambios -> ID EQUALS expression .)
    WHERE           reduce using rule 44 (campocambios -> ID EQUALS expression .)
    PCOMA           reduce using rule 44 (campocambios -> ID EQUALS expression .)
    PLUS            shift and go to state 104
    MINUS           shift and go to state 105


state 84

    (65) expression -> term .
    (66) term -> term . TIMES factor
    (67) term -> term . DIVIDE factor

    PLUS            reduce using rule 65 (expression -> term .)
    MINUS           reduce using rule 65 (expression -> term .)
    COMA            reduce using rule 65 (expression -> term .)
    WHERE           reduce using rule 65 (expression -> term .)
    PCOMA           reduce using rule 65 (expression -> term .)
    TIMES           shift and go to state 106
    DIVIDE          shift and go to state 107


state 85

    (68) term -> factor .

    TIMES           reduce using rule 68 (term -> factor .)
    DIVIDE          reduce using rule 68 (term -> factor .)
    PLUS            reduce using rule 68 (term -> factor .)
    MINUS           reduce using rule 68 (term -> factor .)
    COMA            reduce using rule 68 (term -> factor .)
    WHERE           reduce using rule 68 (term -> factor .)
    PCOMA           reduce using rule 68 (term -> factor .)


state 86

    (69) factor -> NUMBER .

    TIMES           reduce using rule 69 (factor -> NUMBER .)
    DIVIDE          reduce using rule 69 (factor -> NUMBER .)
    PLUS            reduce using rule 69 (factor -> NUMBER .)
    MINUS           reduce using rule 69 (factor -> NUMBER .)
    COMA            reduce using rule 69 (factor -> NUMBER .)
    WHERE           reduce using rule 69 (factor -> NUMBER .)
    PCOMA           reduce using rule 69 (factor -> NUMBER .)


state 87

    (70) factor -> DECIMAL .

    TIMES           reduce using rule 70 (factor -> DECIMAL .)
    DIVIDE          reduce using rule 70 (factor -> DECIMAL .)
    PLUS            reduce using rule 70 (factor -> DECIMAL .)
    MINUS           reduce using rule 70 (factor -> DECIMAL .)
    COMA            reduce using rule 70 (factor -> DECIMAL .)
    WHERE           reduce using rule 70 (factor -> DECIMAL .)
    PCOMA           reduce using rule 70 (factor -> DECIMAL .)


state 88

    (41) update -> UPDATE ID SET cambios WHERE ID . EQUALS expression

    EQUALS          shift and go to state 108


state 89

    (42) cambios -> campocambios COMA cambios .

    WHERE           reduce using rule 42 (cambios -> campocambios COMA cambios .)


state 90

    (33) alter -> ALTER TABLE ID ADD ID tipodato .

    PCOMA           reduce using rule 33 (alter -> ALTER TABLE ID ADD ID tipodato .)


state 91

    (36) drop -> DROP TABLE ID .

    PCOMA           reduce using rule 36 (drop -> DROP TABLE ID .)


state 92

    (37) drop -> DROP COLUMN ID .

    PCOMA           reduce using rule 37 (drop -> DROP COLUMN ID .)


state 93

    (25) selectdefinidos -> SELECT CONCATENAR LPAREN CADENA COMA CADENA . RPAREN

    RPAREN          shift and go to state 109


state 94

    (26) selectdefinidos -> SELECT SUBSTRAER LPAREN CADENA COMA NUMBER . COMA NUMBER

    COMA            shift and go to state 110


state 95

    (28) selectdefinidos -> SELECT CONTAR LPAREN TIMES RPAREN FROM . ID WHERE campocambios

    ID              shift and go to state 111


state 96

    (29) selectdefinidos -> SELECT SUMA LPAREN ID RPAREN FROM . ID WHERE campocambios

    ID              shift and go to state 112


state 97

    (11) defcreate -> ID tipodato campo . COMA defcreate
    (13) defcreate -> ID tipodato campo .

    COMA            shift and go to state 113
    RPAREN          reduce using rule 13 (defcreate -> ID tipodato campo .)


state 98

    (14) campo -> NOT . NULL

    NULL            shift and go to state 114


state 99

    (15) campo -> PRIMARY . KEY

    KEY             shift and go to state 115


state 100

    (16) campo -> foranea .

    COMA            reduce using rule 16 (campo -> foranea .)
    RPAREN          reduce using rule 16 (campo -> foranea .)


state 101

    (17) foranea -> REFERENCES . ID LPAREN ID RPAREN

    ID              shift and go to state 116


state 102

    (21) tipodato -> NVARCHAR LPAREN . NUMBER RPAREN

    NUMBER          shift and go to state 117


state 103

    (51) parametros -> ARROBA ID tipodato COMA . parametros
    (51) parametros -> . ARROBA ID tipodato COMA parametros
    (52) parametros -> . ARROBA ID tipodato

    ARROBA          shift and go to state 50

    parametros                     shift and go to state 118

state 104

    (63) expression -> expression PLUS . term
    (66) term -> . term TIMES factor
    (67) term -> . term DIVIDE factor
    (68) term -> . factor
    (69) factor -> . NUMBER
    (70) factor -> . DECIMAL

    NUMBER          shift and go to state 86
    DECIMAL         shift and go to state 87

    term                           shift and go to state 119
    factor                         shift and go to state 85

state 105

    (64) expression -> expression MINUS . term
    (66) term -> . term TIMES factor
    (67) term -> . term DIVIDE factor
    (68) term -> . factor
    (69) factor -> . NUMBER
    (70) factor -> . DECIMAL

    NUMBER          shift and go to state 86
    DECIMAL         shift and go to state 87
